--- a/index.html
+++ b/index.html
@@ -460,6 +460,11 @@
             <div class="row d-flex align-items-center">
                 <div class="col-lg-6 text-left">
                     <p>© Copyright 2020.All right reserved by <span>Wedding.</span></p>
+                        <div class="musik-wraper">
+                            <audio controls autoplay loop id="myAudio">
+                                <source src="assets/music/musik.mp3" type="audio/mpeg">    
+                            </audio>
+                        </div>
                 </div>
             </div>
         </div>
@@ -513,6 +518,12 @@
     <!-- ===== scrollTop ===== -->
     <div id="stop" class="scrollTop">
         <span><a href=""><img src="assets/images/svg/our-story-heart.png" alt="scrolltop"></a></span>
+    </div>
+    <div class="musiplayer" style="margin-right: 80px; display:none" onclick="playAudio()" id="play">
+        <span><button ><img src="assets/images/svg/stop-play.png" alt="stop"></button></span>
+    </div>
+    <div class="musiplayer" style="margin-right: 80px;" onclick="pauseAudio()" id="stop">
+        <span><button ><img src="assets/images/svg/stop-play.png" alt="stop"></button></span>
     </div>
     <!-- ===== scrollTop end ===== -->
 
