perbaiki fitur ucapan

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
         <span><a href=""><img src="assets/images/svg/our-story-heart.png" alt="scrolltop"></a></span>
     </div>
     <div class="musiplayer" style="margin-right: 80px; display:none" onclick="playAudio()" id="play">
-        <span><button ><img src="assets/images/svg/stop-play.png" alt="stop"></button></span>
+        <span><button ><img src="assets/images/svg/stop-play.png" alt="play"></button></span>
     </div>
     <div class="musiplayer" style="margin-right: 80px;" onclick="pauseAudio()" id="stop">
         <span><button ><img src="assets/images/svg/stop-play.png" alt="stop"></button></span>
