perbaiki fitur musik 2

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body>
+<body onload="loadAuido()">
     <!-- ===== Main Banner ===== -->
     <section class="main-banner" style="background-image: url(assets/images/couple/main-banner1.jpg)" id="home">
         <div class="container-fluid">
