perbaiki fitur musik 4

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                 <div class="col-lg-6 text-left">
                     <p>© Copyright 2020.All right reserved by <span>Wedding.</span></p>
                         <div class="musik-wraper">
-                            <audio controls autoplay loop id="myAudio">
+                            <audio controls loop id="myAudio">
                                 <source src="assets/music/musik.mp3" type="audio/mpeg">    
                             </audio>
                         </div>
