perbaiki fitur musik 5

--- a/index.html
+++ b/index.html
@@ -466,11 +466,11 @@
             <div class="row d-flex align-items-center">
                 <div class="col-lg-6 text-left">
                     <p>© Copyright 2020.All right reserved by <span>Wedding.</span></p>
-                        <div class="musik-wraper">
-                            <audio controls loop id="myAudio">
+                        <!-- <div class="musik-wraper"> -->
+                            <audio loop controls id="myAudio">
                                 <source src="assets/music/musik.mp3" type="audio/mpeg">    
                             </audio>
-                        </div>
+                        <!-- </div> -->
                 </div>
             </div>
         </div>
