--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                             <h1 class="wow bounceIn" data-wow-delay="1100ms">Ayu Rahmi</h1>
                         </div>
                         <div class="text-overflow">
-                            <p class="wow bounceIn" data-wow-delay="1300ms">MENGUNDANG ANDA<span>DI ACARA PERNIKAHAN KAMI</span></p>
-                            <h3 class="wow bounceIn" data-wow-delay="1500ms">May 29<sup>th</sup>,2020</h3>
+                            <p class="wow bounceIn" data-wow-delay="1300ms">MENGUNDANG <strong class="tamu"></strong> <span> DI ACARA PERNIKAHAN KAMI</span></p>
+                            <h3 class="wow bounceIn" data-wow-delay="1500ms">04 November 2022</h3>
                         </div>
                     </div>
                 </div>
@@ -100,11 +100,13 @@
                         </div>
                         <div class="couple-name">
                             <div class="couple-content">
-                                <h3 class="wow fadeInLeft">Richard</h3>
+                                <h3 class="wow fadeInLeft">Kadek Dana Handika</h3>
                                 <img class="wow fadeInRight mr-5" src="./assets/images/svg/groom-dress.svg" alt="groom-dress">
                             </div>
                             <div class="text-overflow mr-5 mt-2 wow fadeInUp">
-                                <p>We met through a mutual friend at the end of our freshman year in college at Georgia. I noticed her eyes, and how outgoing she was.</p>
+                                <p>Putra Kedua dari Pasangan I Putu Suardika dan Ketut Sumenari <br>
+                                <i>Alamat : Jl. Sahadewa Gg IVA No 9 Singaraja</i>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -128,11 +130,13 @@
                                             <img class="wow fadeInLeft ml-5 bride-dress" src="./assets/images/svg/bride-dress.svg" alt="bride-dress">
                                         </div>
                                         <div class="order-2 order-lg-2 mr-4">
-                                            <h3 class="wow fadeInRight text-right">Emily</h3>
+                                            <h3 class="wow fadeInRight text-right">Gusti Ayu Kade Ari Rahmayanti</h3>
                                         </div>
                                     </div>
                                     <div class="text-overflow order-1 order-lg-2 ml-5 mt-2 wow fadeInUp">
-                                        <p>We met through a mutual friend at the end of our freshman year in college at Georgia. I noticed her eyes, and how outgoing she was.</p>
+                                        <p>Putri Kedua dari Pasangan I Gusti Putu Sutaya dan I Gusti Agung Ayu Kade Witari <br>
+                                            <i>Alamat : Banjar Delod Bale Angung Desa Medoyo Dauh Tukad,Jembrana</i>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
