edit keterangan dan sesi waktu pernikahan

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </div>
                         <div class="text-overflow">
                             <p class="wow bounceIn" data-wow-delay="1300ms">MENGUNDANG <strong class="tamu"></strong> <span> DI ACARA PERNIKAHAN KAMI</span></p>
-                            <h3 class="wow bounceIn" data-wow-delay="1500ms">04 November 2022</h3>
+                            <h3 class="wow bounceIn waktu" data-wow-delay="1500ms"></h3>
                         </div>
                     </div>
                 </div>
@@ -244,9 +244,9 @@
                     <div class="col-lg-12">
                         <div class="save-date-banner">
                             <div class="save-date-title">
-                                <h2 class="main-title wow bounceIn">Save the date</h2>
+                                <h2 class="main-title wow bounceIn">Finally</h2>
                                 <img class="content-logo" src="./assets/images/svg/content-logo.png" alt="content-logo">
-                                <h3>May 29<sup>th</sup>,2020</h3>
+                                <h3 class="waktu2"></h3>
                             </div>
                         </div>
                     </div>
@@ -255,22 +255,22 @@
                     <div class="d-flex flex-wrap">
                         <div class="col-lg-3 col-sm-6 mb-4 mt-4">
                             <div class="countdown-box wow zoomIn" data-wow-delay="300ms">
-                                <p><span id="days"></span> Days</p>
+                                <p><span id="days"></span> Hari</p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-sm-6 mb-4 mt-4">
                             <div class="countdown-box wow zoomIn" data-wow-delay="800ms">
-                                <p><span id="hours"></span> Hours</p>
+                                <p><span id="hours"></span> Jam</p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-sm-6 mt-4 mb-4">
                             <div class="countdown-box wow zoomIn" data-wow-delay="1300ms">
-                                <p><span id="minutes"></span> Minutes</p>
+                                <p><span id="minutes"></span> Menit</p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-sm-6 mt-4">
                             <div class="countdown-box wow zoomIn" data-wow-delay="1800ms">
-                                <p><span id="seconds"></span> Seconds</p>
+                                <p><span id="seconds"></span> Detik</p>
                             </div>
                         </div>
                     </div>
@@ -386,7 +386,7 @@
                 <div class="col-lg-12">
                     <div class="rsvp-form-title">
                         <h2 class="main-title wow bounceIn">R.S.V.P</h2><img class="content-logo" src="./assets/images/svg/content-logo.png" alt="content-logo">
-                        <p>We are eagerly waiting for your RSVP!</p>
+                        <p>Kami senang jika saudara memberikan doa terbaik 🥰</p>
                     </div>
                 </div>
             </div>
@@ -469,7 +469,7 @@
         <div class="container">
             <div class="row d-flex align-items-center">
                 <div class="col-lg-6 text-left">
-                    <p>© Copyright 2020.All right reserved by <span>Wedding.</span></p>
+                    <p>© Copyright 2022.All right reserved by <span>Wedding.Jonsin</span></p>
                         <div class="musik-wraper">
                             <audio loop controls autoplay="true" id="myAudio">
                                 <source src="assets/music/musik.mp3" type="audio/mpeg">    
