buat modal open undangan

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                 <div class="col-lg-6 text-left">
                     <p>© Copyright 2022.All right reserved by <span>Wedding.Jonsin</span></p>
                         <div class="musik-wraper">
-                            <audio loop controls autoplay="true" id="myAudio">
+                            <audio loop controls id="myAudio">
                                 <source src="assets/music/musik.mp3" type="audio/mpeg">    
                             </audio>
                         </div>
@@ -480,6 +480,21 @@
         </div>
     </footer>
     <!-- ===== footer end ===== -->
+
+    <!-- modal open undangan -->
+            <!-- Modal -->
+                <div class="modal fade" id="staticBackdrop" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true" style="background: rgba(114, 110, 110, 0.61) !important; backdrop-filter: blur(6.5px); -webkit-backdrop-filter: blur(6.5px);">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        
+                            <div class="wow bounceIn submit-box" style="width: 80%; text-align: center; top: 50%; position: absolute; margin: 0;left: 10%;">
+                                <input type="button" onclick="playAudio()" data-dismiss="modal" style="background: transparent !important; border: none; font-weight: bold; color: aliceblue; width: fit-content;" value="Buka Undangan ">
+                            </div>
+                        
+                    </div>
+                </div>
+                </div>
+    <!-- end modal open undangan -->
 
     <!-- ===== Model design ===== -->
     <div class="modal fade bd-example-modal-lg" id="modalrsvp" tabindex="-1" role="dialog" aria-hidden="true">
