perbaiki scroll agar ke top

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
     <!-- ===== Model design end ===== -->
 
     <!-- ===== scrollTop ===== -->
-    <div id="stop" class="scrollTop">
+    <div class="scrollTop">
         <span><a href=""><img src="assets/images/svg/our-story-heart.png" alt="scrolltop"></a></span>
     </div>
     <div class="musiplayer" style="margin-right: 80px; display:none" onclick="playAudio()" id="play">
