--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4">
-                    <a href="assets/images/couple/callie-morgan-yXwxlJPsDeU-unsplash.jpg" data-fancybox="gallery">
-                        <div class="gallery-img" style="background-image: url(assets/images/couple/callie-morgan-yXwxlJPsDeU-unsplash.jpg)"></div>
+                    <a href="assets/images/couple/galleri6.jpeg" data-fancybox="gallery">
+                        <div class="gallery-img" style="background-image: url(assets/images/couple/galleri6.jpeg)"></div>
                     </a>
                 </div>
                 <div class="col-lg-4">
@@ -350,9 +350,9 @@
                         </a>
                     </div>
                     <div class="col-lg-4">
-                        <a href="assets/images/couple/callie-morgan-yXwxlJPsDeU-unsplash.jpg" data-fancybox="gallery">
+                        <a href="assets/images/couple/galleri6.jpeg" data-fancybox="gallery">
 
-                            <div class="gallery-img" style="background-image: url(assets/images/couple/callie-morgan-yXwxlJPsDeU-unsplash.jpg)">
+                            <div class="gallery-img" style="background-image: url(assets/images/couple/galleri6.jpeg)">
                                 <div class="gallery-frame"></div>
                             </div>
                         </a>
@@ -366,8 +366,8 @@
 
                     </div>
                     <div class="col-lg-4">
-                        <a href="assets/images/couple/gallery-images01.jpg" data-fancybox="gallery">
-                            <div class="gallery-img" style="background-image: url(assets/images/couple/gallery-images01.jpg)">
+                        <a href="assets/images/couple/gallerii.jpeg" data-fancybox="gallery">
+                            <div class="gallery-img" style="background-image: url(assets/images/couple/gallerii.jpeg)">
                                 <div class="gallery-frame"></div>
                             </div>
                         </a>
@@ -376,6 +376,33 @@
                         <a href="assets/images/couple/save-date.jpg" data-fancybox="gallery">
 
                             <div class="gallery-img" style="background-image: url(assets/images/couple/save-date.jpg)">
+                                <div class="gallery-frame"></div>
+                            </div>
+
+                        </a>
+                    </div>
+                    <div class="col-lg-4">
+                        <a href="assets/images/couple/galleri4.jpeg" data-fancybox="gallery">
+
+                            <div class="gallery-img" style="background-image: url(assets/images/couple/galleri4.jpeg)">
+                                <div class="gallery-frame"></div>
+                            </div>
+
+                        </a>
+                    </div>
+                    <div class="col-lg-4">
+                        <a href="assets/images/couple/galleri5.jpeg" data-fancybox="gallery">
+
+                            <div class="gallery-img" style="background-image: url(assets/images/couple/galleri5.jpeg)">
+                                <div class="gallery-frame"></div>
+                            </div>
+
+                        </a>
+                    </div>
+                    <div class="col-lg-4">
+                        <a href="assets/images/couple/callie-morgan-yXwxlJPsDeU-unsplash.jpg" data-fancybox="gallery">
+
+                            <div class="gallery-img" style="background-image: url(assets/images/couple/callie-morgan-yXwxlJPsDeU-unsplash.jpg)">
                                 <div class="gallery-frame"></div>
                             </div>
 
@@ -458,7 +485,7 @@
                                 <div class="ty-img" style="background-image: url(assets/images/couple/ty-bg.jpg)"></div>
                             </div>
                             <div class="ty">
-                                <div class="ty-img" style="background-image: url(assets/images/couple/gallery-images01.jpg)"></div>
+                                <div class="ty-img" style="background-image: url(assets/images/couple/galleri4.jpeg)"></div>
                             </div>
                             <div class="ty">
                                 <div class="ty-img" style="background-image: url(assets/images/couple/callie-morgan-yXwxlJPsDeU-unsplash.jpg)"></div>
